--- a/src/main.css
+++ b/src/main.css
@@ -30,23 +30,4 @@ body {
   color: #0C1E1A;
   padding-left: 16px;
   padding-right: 16px;
-}
-
-main {
-  padding-top: 48px;
-  padding-bottom: 48px;
-}
-main .hero__header {
-  font-family: "Outfit-Light", sans-serif;
-  font-weight: 300;
-}
-main .hero__content {
-  font-family: "Newsreader-Light", sans-serif;
-  font-weight: 300;
-  font-size: 32px;
-  line-height: 54px;
-  margin-top: 24px;
-}
-main .hero__content .hero__content-emphasized {
-  font-family: "Newsreader-LightItalic", sans-serif;
-}/*# sourceMappingURL=App.css.map */
+}/*# sourceMappingURL=main.css.map */
