--- a/src/App.css
+++ b/src/App.css
@@ -49,4 +49,12 @@ main .hero__content {
 }
 main .hero__content .hero__content-emphasized {
   font-family: "Newsreader-LightItalic", sans-serif;
+}
+main .card-container {
+  gap: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 64px;
 }/*# sourceMappingURL=App.css.map */
