--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -42,7 +42,7 @@ button {
   gap: 8px;
   cursor: pointer;
   display: flex;
-  direction: row;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   padding-left: 16px;
