--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -32,16 +32,32 @@ body {
   padding-right: 16px;
 }
 
-nav {
-  height: 80px;
+.card {
+  background: #EFFAF7;
+  width: 100%;
+  border: 1px solid #B7CEC9;
+  border-radius: 16px;
+}
+.card .card__image-container {
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.card .card__image-container img {
+  width: 100%;
+  height: 100%;
+  border-radius: 16px 16px 0 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.card .card__tags-container {
+  gap: 6px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-}
-nav h1 {
-  color: #0C1E1A;
-  font-size: 30px;
-  font-family: "Newsreader-Regular", sans-serif;
-  font-weight: 500;
-}/*# sourceMappingURL=Navbar.css.map */
+  justify-content: start;
+  padding: 12px 12px 12px 12px;
+}/*# sourceMappingURL=Card.css.map */
