--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -33,12 +33,14 @@ body {
 }
 
 .card {
-  background: #EFFAF7;
+  background: #E4EFEC;
+  font-family: "Outline-Medium", sans-serif;
   width: 100%;
   border: 1px solid #B7CEC9;
   border-radius: 16px;
 }
 .card .card__image-container {
+  position: relative;
   width: 100%;
   height: 250px;
   overflow: hidden;
@@ -52,6 +54,15 @@ body {
   border-radius: 16px 16px 0 0;
   -o-object-fit: cover;
      object-fit: cover;
+}
+.card .card__image-container .card__photographer-name {
+  background: #E4EFEC;
+  font-size: 14px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border-radius: 10px 0 0 0;
+  padding: 10px 10px 10px 10px;
 }
 .card .card__tags-container {
   gap: 6px;
