--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,12 +1,14 @@
 @import "../../main.scss";
 
 .card {
-  background: $primary-pistachio;
+  background: $secondary-sage;
+  font-family: "Outline-Medium", sans-serif;
   width: 100%;
   border: 1px solid $secondary-seagreen;
   border-radius: 16px;
 
   .card__image-container {
+    position: relative;
     width: 100%;
     height: 250px;
     overflow: hidden;
@@ -19,6 +21,16 @@
       height: 100%;
       border-radius: 16px 16px 0 0;
       object-fit: cover;
+    }
+
+    .card__photographer-name {
+        background: $secondary-sage;
+        font-size: 14px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        border-radius: 10px 0 0 0;
+        @include p(10px);
     }
   }
 
