add photo filtering logic by selected tags

--- a/src/components/Tags/Tags.css
+++ b/src/components/Tags/Tags.css
@@ -11,4 +11,9 @@
 .tag:hover {
   background: #1E6655;
   color: #FFFFFF;
+}
+
+.selected {
+  background: #1E6655;
+  color: #FFFFFF;
 }/*# sourceMappingURL=Tags.css.map */
