--- a/src/components/Tags/Tags.scss
+++ b/src/components/Tags/Tags.scss
@@ -16,3 +16,8 @@
         color: variables.$secondary-white
     }
 }
+
+.selected {
+    background: variables.$primary-forestgreen;
+    color: variables.$secondary-white;
+}
