removed margin on tags container; add background on filter button when active

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -28,3 +28,12 @@ button {
     }
   }
 }
+
+.active {
+  background: variables.$primary-forestgreen;
+  color: variables.$secondary-white;
+
+  svg {
+    fill: variables.$secondary-white;
+  }
+}
