--- a/src/styles/partials/_globals.scss
+++ b/src/styles/partials/_globals.scss
@@ -10,5 +10,5 @@
 body {
     background: variables.$primary-pistachio;
     color: variables.$primary-black;
-    @include padding.px(16px);
+    // @include padding.px(16px);
 }
