--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
 
 main {
     @include padding.py(48px);
+    @include padding.px(16px);
 
     .hero__header {
         font-family: "Outfit-Light", sans-serif;
