--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -25,4 +25,12 @@ button:hover {
 }
 button:hover svg {
   fill: #FFFFFF;
+}
+
+.active {
+  background: #1E6655;
+  color: #FFFFFF;
+}
+.active svg {
+  fill: #FFFFFF;
 }/*# sourceMappingURL=Button.css.map */
