--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,13 @@ main .hero__content .hero__content-emphasized {
     line-height: 66px;
   }
 }
+@media (min-width: 1280px) {
+  main .hero__content {
+    font-size: 52px;
+    line-height: 66px;
+    width: 50%;
+  }
+}
 main .card-container {
   gap: 16px;
   display: grid;
@@ -72,5 +79,11 @@ main .card-container {
   main .card-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 1280px) {
+  main .card-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }/*# sourceMappingURL=App.css.map */
