--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,12 @@ main {
     padding-right: 24px;
   }
 }
+@media (min-width: 1280px) {
+  main {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
 main .hero__header {
   font-family: "Outfit-Light", sans-serif;
   font-weight: 300;
@@ -85,5 +91,6 @@ main .card-container {
   main .card-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 24px;
   }
 }/*# sourceMappingURL=App.css.map */
