--- a/src/components/Tags/Tags.css
+++ b/src/components/Tags/Tags.css
@@ -4,13 +4,32 @@
   font-size: 14px;
   font-family: "Outfit-Medium", sans-serif;
   border: 1px solid #B7CEC9;
-  border-radius: 8px;
+  border-radius: 12px;
   cursor: pointer;
-  padding: 6px 6px 6px 6px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 .tag:hover {
   background: #1E6655;
   color: #FFFFFF;
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .tag {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+}
+@media (min-width: 1280px) {
+  .tag {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
 }
 
 .selected {
