--- a/src/components/Tags/Tags.css
+++ b/src/components/Tags/Tags.css
@@ -1,22 +1,22 @@
-.tag {
+.clickable-tag {
   background: #FFFFFF;
-  color: #0C1E1A;
+  color: #1E6655;
   font-size: 14px;
   font-family: "Outfit-Medium", sans-serif;
-  border: 1px solid #B7CEC9;
-  border-radius: 12px;
+  border: 1px solid #1E6655;
+  border-radius: 8px;
   cursor: pointer;
   padding-top: 6px;
   padding-bottom: 6px;
   padding-left: 8px;
   padding-right: 8px;
 }
-.tag:hover {
+.clickable-tag:hover {
   background: #1E6655;
   color: #FFFFFF;
 }
 @media (min-width: 768px) and (max-width: 1279px) {
-  .tag {
+  .clickable-tag {
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 12px;
@@ -24,7 +24,7 @@
   }
 }
 @media (min-width: 1280px) {
-  .tag {
+  .clickable-tag {
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 12px;
@@ -35,4 +35,38 @@
 .selected {
   background: #1E6655;
   color: #FFFFFF;
+}
+
+.non-clickable-tag {
+  background: #FFFFFF;
+  color: #0C1E1A;
+  font-size: 14px;
+  font-family: "Outfit-Medium", sans-serif;
+  border: 1px solid #B7CEC9;
+  border-radius: 8px;
+  cursor: pointer;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+.non-clickable-tag:hover {
+  background: #B7CEC9;
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .non-clickable-tag {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+}
+@media (min-width: 1280px) {
+  .non-clickable-tag {
+    border-radius: 12px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
 }/*# sourceMappingURL=Tags.css.map */
