--- a/src/App.css
+++ b/src/App.css
@@ -30,65 +30,80 @@ body {
   font-family: "Outfit-Medium";
   src: url("../../assets/fonts/Outfit-Medium.woff") format("woff");
 }
-main {
+@media (min-width: 1280px) {
+  main {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: flex-start;
+    justify-content: center;
+  }
+}
+main .container {
+  width: 100%;
   padding-top: 48px;
   padding-bottom: 48px;
   padding-left: 16px;
   padding-right: 16px;
 }
 @media (min-width: 768px) and (max-width: 1279px) {
-  main {
+  main .container {
     padding-left: 24px;
     padding-right: 24px;
   }
 }
 @media (min-width: 1280px) {
-  main {
+  main .container {
     padding-left: 24px;
     padding-right: 24px;
   }
 }
-main .hero__header {
+main .container .hero__header {
   font-family: "Outfit-Light", sans-serif;
   font-weight: 300;
 }
-main .hero__content {
+@media (min-width: 1280px) {
+  main .container .hero__header {
+    font-size: 20px;
+  }
+}
+main .container .hero__content {
   font-family: "Newsreader-Light", sans-serif;
   font-weight: 300;
   font-size: 32px;
   line-height: 54px;
   margin-top: 24px;
 }
-main .hero__content .hero__content-emphasized {
+main .container .hero__content .hero__content-emphasized {
   font-family: "Newsreader-LightItalic", sans-serif;
 }
 @media (min-width: 768px) and (max-width: 1279px) {
-  main .hero__content {
+  main .container .hero__content {
     font-size: 52px;
     line-height: 66px;
   }
 }
 @media (min-width: 1280px) {
-  main .hero__content {
+  main .container .hero__content {
     font-size: 52px;
     line-height: 66px;
-    width: 50%;
+    max-width: 50vw;
   }
 }
-main .card-container {
+main .container .card-container {
   gap: 16px;
   display: grid;
   grid-template-columns: 1fr;
   padding-top: 64px;
 }
 @media (min-width: 768px) and (max-width: 1279px) {
-  main .card-container {
+  main .container .card-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
 }
 @media (min-width: 1280px) {
-  main .card-container {
+  main .container .card-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 24px;
