--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -28,40 +28,20 @@ nav {
   padding-left: 16px;
   padding-right: 16px;
 }
+@media (min-width: 1280px) {
+  nav {
+    height: auto;
+    padding: 24px 24px 24px 24px;
+  }
+}
 nav h1 {
   color: #0C1E1A;
   font-size: 30px;
   font-family: "Newsreader-Regular", sans-serif;
   font-weight: 500;
 }
-
-.filter__tags-container {
-  background: #E4EFEC;
-  gap: 8px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  padding: 16px 16px 16px 16px;
-  height: 0;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.8s ease-in-out;
-}
-.filter__tags-container .filter__header {
-  font-family: "Outfit-Medium";
-  letter-spacing: 1px;
-}
-.filter__tags-container .filter__tags {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-  gap: 8px;
-}
-.filter__tags-container.open {
-  height: -moz-fit-content;
-  height: fit-content;
-  max-height: 700px;
+@media (min-width: 1280px) {
+  nav h1 {
+    font-size: 40px;
+  }
 }/*# sourceMappingURL=Navbar.css.map */
