--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,42 +5,23 @@
 @use "../../styles/partials/typography";
 
 nav {
-    height: 80px;
-    @include mixins.flex($justify: space-between);
-    @include padding.px(16px);
+  height: 80px;
+  @include mixins.flex($justify: space-between);
+  @include padding.px(16px);
 
-    h1 {
-        color: variables.$primary-black;
-        font-size: 30px;
-        font-family: "Newsreader-Regular", sans-serif;
-        font-weight: 500;
+  @include mixins.desktop {
+    height: auto;
+    @include padding.p(24px);
+  }
+
+  h1 {
+    color: variables.$primary-black;
+    font-size: 30px;
+    font-family: "Newsreader-Regular", sans-serif;
+    font-weight: 500;
+
+    @include mixins.desktop {
+      font-size: 40px;
     }
-}
-
-.filter__tags-container {
-    background: variables.$secondary-sage;
-    gap: 8px;
-    @include mixins.flex($direction: column, $align: flex-start);
-    @include padding.p(16px);
-    height: 0;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.8s ease-in-out;
-
-    .filter__header {
-        font-family: "Outfit-Medium";
-        letter-spacing: 1px;
-    }
-
-    .filter__tags {
-        @include mixins.flex($justify: flex-start);
-        flex-wrap: wrap;
-        gap: 8px;
-    }
-
-    // added this class for the smooth opening transition of tags container
-    &.open {
-        height: fit-content;
-        max-height: 700px;
-    }
+  }
 }
