added comment route and comment data

--- a/src/pages/PhotoPage/PhotoPage.scss
+++ b/src/pages/PhotoPage/PhotoPage.scss
@@ -48,3 +48,30 @@
     }
   }
 }
+
+.comments-container {
+  font-family: "Outfit-Medium", sans-serif;
+  @include padding.px(16px);
+
+  .comments__comment-count {
+    @include margin.mb(16px);
+  }
+
+  .comments__wrapper {
+    border-top: 1.5px solid variables.$secondary-seagreen;
+    @include padding.py(16px);
+
+    .comments__name-date-container {
+      @include mixins.flex($justify: space-between);
+
+      .comments__name, .comment__date {
+        color: variables.$primary-forestgreen;
+      }
+    }
+
+    .comments__comment {
+      font-size: 18px;
+      @include margin.mt(16px);
+    }
+  }
+}
