add hover effect to submit button

--- a/src/pages/PhotoPage/PhotoPage.scss
+++ b/src/pages/PhotoPage/PhotoPage.scss
@@ -101,6 +101,11 @@
     // @include margin.mt(8px);
     @include padding.py(10px);
     @include padding.px(16px);
+
+    &:hover {
+      background: variables.$secondary-seagreen;
+      color: variables.$primary-forestgreen;
+    }
   }
 }
 
