--- a/src/pages/PhotoPage/PhotoPage.scss
+++ b/src/pages/PhotoPage/PhotoPage.scss
@@ -8,4 +8,8 @@
   font-family: "Outfit-Medium", sans-serif;
   @include padding.py(24px);
   @include padding.px(16px);
+
+  @include mixins.tablet {
+    @include padding.p(24px);
+  }
 }
