--- a/src/components/Comment/Comment.scss
+++ b/src/components/Comment/Comment.scss
@@ -13,6 +13,10 @@
     .comments__name,
     .comment__date {
       color: variables.$primary-forestgreen;
+
+      @include mixins.tablet {
+        font-size: 12px;
+      }
     }
   }
 
