--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -5,63 +5,70 @@
 @use "../../styles/partials/variables";
 
 .form-container {
-    font-family: "Outfit-Medium";
-    @include mixins.flex($direction: column);
-    @include margin.my(16px);
-    @include padding.px(16px);
-  
-    .form__input {
-      width: 100%;
-      @include mixins.flex($direction: column, $align: flex-start);
-      @include margin.my(8px);
-  
-      label {
-        @include margin.mb(8px);
-      }
-  
-      .form__input-name,
-      .form__input-comment {
-        font-family: "Outfit-Medium";
-        width: 100%;
-        border: 2px solid variables.$secondary-seagreen;
-        border-radius: 6px;
-        outline: none;
-        resize: none;
-        min-height: 30px;
-        min-width: 280px;
-        @include padding.p(8px);
-        // on desktop / tablet = padding 16px x axis, 8px y axis
-  
-        &:focus,
-        &:active {
-          border-color: variables.$primary-forestgreen;
-        }
-  
-        &:invalid {
-          border-color: variables.$error;
-        }
-      }
+  font-family: "Outfit-Medium";
+  @include mixins.flex($direction: column);
+  @include margin.my(16px);
+  @include padding.px(16px);
+
+  @include mixins.tablet {
+    @include padding.px(24px);
+  }
+
+  .form__input {
+    width: 100%;
+    @include mixins.flex($direction: column, $align: flex-start);
+    @include margin.my(8px);
+
+    label {
+      @include margin.mb(8px);
     }
-  
-    .form__submit-btn {
-      background: variables.$primary-forestgreen;
-      color: variables.$secondary-sage;
-      border: none;
+
+    .form__input-name,
+    .form__input-comment {
+      font-family: "Outfit-Medium";
+      width: 100%;
+      border: 2px solid variables.$secondary-seagreen;
       border-radius: 10px;
-      cursor: pointer;
-      @include margin.m(12px, 6px, 0px, auto);
-      @include padding.py(10px);
-      @include padding.px(16px);
-  
-      &:hover {
-        background: variables.$secondary-seagreen;
-        color: variables.$primary-forestgreen;
+      outline: none;
+      resize: none;
+      min-height: 30px;
+      min-width: 280px;
+      @include padding.p(8px);
+      // on desktop / tablet = padding 16px x axis, 8px y axis
+
+      &:focus,
+      &:active {
+        border-color: variables.$primary-forestgreen;
       }
 
-      &:disabled {
-        background: variables.$secondary-seagreen;
-        color: variables.$primary-forestgreen;
-        cursor: not-allowed;
+      &:invalid {
+        border-color: variables.$error;
       }
     }
   }
+
+  .form__submit-btn {
+    background: variables.$primary-forestgreen;
+    color: variables.$secondary-sage;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    @include margin.m(12px, 6px, 0px, auto);
+    @include padding.py(10px);
+    @include padding.px(16px);
+    @include mixins.tablet {
+      font-size: 16px;
+      @include padding.py(8px);
+      @include padding.px(22px);
+    }
+
+    &:hover {
+      background: variables.$secondary-seagreen;
+      color: variables.$primary-forestgreen;
+    }
+
+    &:disabled {
+      cursor: not-allowed;
+    }
+  }
+}
